--- a/foro.html
+++ b/foro.html
@@ -20,6 +20,15 @@
 
   <main>
     <section class="formulario">
+      <section class="formulario">
+  <h2>Con base a esta encuesta puedes publicar tu opinión sobre la problemática en este foro</h2>
+  <p class="subtexto">
+    Este espacio busca promover la participación ciudadana y generar conciencia sobre las afectaciones ambientales
+    causadas por las malas prácticas en la actividad porcícola en San Antonio del Tequendama.
+  </p>
+  <h2>Comparte tu opinión</h2>
+  <form id="formOpiniones">
+
       <h2>Comparte tu opinión</h2>
       <form id="formOpiniones">
         <input type="text" id="nombre" placeholder="Tu nombre (opcional)">
