--- a/foro.html
+++ b/foro.html
@@ -21,12 +21,11 @@
   <main>
     <section class="formulario">
       <section class="formulario">
-  <h2>Con base a esta encuesta puedes publicar tu opinión sobre la problemática en este foro (https://docs.google.com/forms/d/e/1FAIpQLSeEBS37CMx6k6LxPPkKZb9CCZb7Q8kaXuAJcZFc3GHkFmAxQA/viewform?usp=header )</h2>
+  <h2>Con base a esta encuesta puedes publicar tu opinión sobre la problemática en este foro</h2>
   <p class="subtexto">
     Este espacio busca promover la participación ciudadana y generar conciencia sobre las afectaciones ambientales
-    causadas por las malas prácticas en la actividad porcícola en San Antonio del Tequendama.
+    causadas por las malas prácticas en la actividad porcícola en San Antonio del Tequendama (https://docs.google.com/forms/d/e/1FAIpQLSeEBS37CMx6k6LxPPkKZb9CCZb7Q8kaXuAJcZFc3GHkFmAxQA/viewform?usp=header).
   </p>
-  <h2>Comparte tu opinión</h2>
   <form id="formOpiniones">
 
       <h2>Comparte tu opinión</h2>
@@ -49,4 +48,5 @@
   </footer>
 </body>
 </html>
+
 
